--- a/webapp/templates/threaten/threaten.html
+++ b/webapp/templates/threaten/threaten.html
@@ -337,7 +337,7 @@
             });
          },
         columns: [
-            { data: 'name',title:'日志编号' },
+            { data: 'log_id',title:'日志编号' },
             { data: 'name',title:'日志名称' },
             { data: 'type',title:'日志类型' ,
                 "defaultContent": ""
